--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-av": "^8.0.0",
+    "expo-cli": "^3.13.1",
     "expo-font": "^8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-video": "^5.0.2",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
